# snip-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  provision.sh  rsnippet.pkg  snip.pkg
.github/workflows/: release.yml  test.yml
scripts/: postinstall
src/: actions.rs  constants.rs  helpers.rs  lib.rs  main.rs  models.rs
src/actions/: create_directory_and_file.rs  edit_snippet_in_file.rs  list_snippets.rs  open_file_with.rs  remove_snippet_from_file.rs  search_snippets.rs  show_snippet.rs  update_key_in_file.rs  write_snippet_to_file.rs
src/helpers/: expand_home_dir.rs  get_app_config.rs  is_fuzzy_match.rs
src/models/: cli_model.rs  commands_model.rs  identifier_model.rs  snip_config_model.rs  snippet_model.rs
