[package]
name = "snip-cli"
version = "0.1.1"
edition = "2021"
authors = ["Uriah G. <codeitlikemiley@gmail.com>"]
description = "A CLI tool (snip-cli) for managing Neovim and  VSCode snippets"
readme = "README.md"
license = "MIT"
keywords = ["neovim", "snippets", "rust", "cli", "vscode"]
categories = ["command-line-utilities"]

# use in Github workflow `release`
[[bin]]
name = "snip"
path = "src/main.rs"

# Used when Bunding for OSX
[[bin]]
name = "snip-cli"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["cargo", "derive", "string"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
tempfile = { version = "3.8.1", features = [] }
prettytable = "0.10.0"
dirs-next = "2.0.0"
dotenv = { version = "0.15.0", features = ["clap"] }

[package.metadata.bundle]
name = "snip" # The name of your application
identifier = "com.codeitlikemiley.snip" # The bundle identifier of your application
copyright = "Copyright (c) codeitlikemiley 2023. All rights reserved."
category = "Developer Tool"
short_description = "A CLI tool for managing Neovim and VSCode snippets"
long_description = "A CLI tool for managing Neovim and VSCode snippets"
version = "0.1.1" # Version of your application
osx_url_schemes = [
  "com.codeitlikemiley.snip",
] # URL schemes your application supports
script = "scripts/postinstall" # Path to your postinstall script

[profile.release]
lto = true
codegen-units = 1
strip = true
